--- a/assets/index.html
+++ b/assets/index.html
@@ -1,10 +1,68 @@
 <!doctype html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>FAF</title>
+    <title>Font Awesome Finder</title>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css" rel="stylesheet" />
+    <style>
+        body {
+            font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
+            font-size: 100%;
+        }
+        #status {
+            /* avoid an excessively wide status text */
+            white-space: pre;
+            text-overflow: ellipsis;
+            overflow: hidden;
+            max-width: 400px;
+        }
+
+        #icon-box {
+            font-size: 1.4em
+        }
+        #suggestions {
+            width: 500px
+        }
+        #suggestions li {
+            float: left;
+            list-style: none;
+            background: #eee;
+            padding: 10px;
+            border: 1px solid #ccc;
+            text-align: center;
+            width: 25%;
+            height: 40px;
+        }
+        .suggestion {
+            font-size: 1.5rem;
+            color: blue
+        }
+        .icon-name {
+            font-size: 0.5rem
+        }
+        .icon-ele {
+            cursor: pointer;
+        }
+    </style>
+
 </head>
 <body>
+<input type="text" id="input-box" class="form-control" placeholder="type icon name" />
+<span id="status"></span>
+<template id="icon-template">
+    <i class="fa fa-ban" class="icon-box"></i>
+    <div class="icon-name"></div>
+    <br />
+</template>
+<template id="icon-suggestion-tmpl">
+    <li class="icon-ele">
+        <i class="fa suggestion"></i>
+        <br />
+        <span class="icon-name"></span>
+    </li>
+</template>
+<ul id="suggestions"></ul>
 
+<script src="js/icon.min.js"></script>
 </body>
 </html>
+
